--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DataVera Consulting</title>
+
+    <title>DV Consulting | Excel, Veri Analizi ve Yapay Zeka Danışmanlığı</title>
+
+    <meta name="description" content="İşletmeniz için profesyonel Excel Dashboard tasarımı, otomatik raporlama sistemleri ve Yapay Zeka entegrasyonu hizmetleri. Verilerinizi DV Consulting ile yönetin.">
+
+    <meta name="keywords" content="excel danışmanlık, veri analizi, dashboard yapımı, power bi, yapay zeka, kurumsal raporlama, excel eğitimi, dv consulting">
+
+    <meta name="author" content="DV Consulting">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="DV Consulting - Veri ve AI Çözümleri">
+    <meta property="og:description" content="Excel ve Yapay Zeka ile iş süreçlerinizi hızlandırın. Profesyonel danışmanlık hizmetleri.">
+    <meta property="og:url" content="https://www.dvconsulting.com.tr">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="tr_TR">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -19,21 +34,23 @@
           scrollbar-width: none;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+
+    <script type="importmap">
+    {
+      "imports": {
+        "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+        "react/": "https://aistudiocdn.com/react@^19.2.0/",
+        "react": "https://aistudiocdn.com/react@^19.2.0",
+        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+        "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
+        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
+      }
+    }
+    </script>
+    <link rel="stylesheet" href="/index.css">
+  </head>
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
