--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
   <head>
+    <meta name="google-site-verification" content="WXiwGeOJttFOJTkFc6aKQabrTwC2WWX2XsTCMuyD4zE" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
